test_regress/t/t_randomize_soft_randc_bad.out
%Error: t/t_randomize_soft_randc_bad.v:10:28: Randc variables not allowed in 'constraint soft' (IEEE 1800-2023 18.5.13.1)
                                            : ... note: In instance 't'
   10 |    constraint c_bad { soft rc > 4; }   
      |                            ^~
%Error: Exiting due to
